Fix RBCX Spacing for book captions

--- a/src/TileViews/RBCX.css
+++ b/src/TileViews/RBCX.css
@@ -95,35 +95,9 @@
   width: 100%;
 }
 
-@media all and (min-width: 800px) {
+@media all and (min-width: 1100px) {
   .rbc-wrapper-a {
-    padding-top: 80%;
-    margin-bottom: 300px;
-  }
-}
-
-.center-box {
-  padding: 70px 25px;
-}
-
-@media all and (min-width: 675px) {
-  .center-box {
-    margin: 0 27.5%;
-    width: 45%;
-    padding: 70px 0;
-  }
-}
-
-.center-box p, .center-box h2 {
-  padding: 0;
-}
-
-@media all and (min-width: 800px) {
-  .playbook-box {
-    position: absolute;
-    padding-top: calc(400px + 35%);
-    left: 0;
-    top: 0;
+    padding-top: 60%;
   }
 }
 
@@ -235,7 +209,7 @@
   width: 100%;
 }
 
-@media all and (min-width: 800px) {
+@media all and (min-width: 1100px) {
   .rbc-dots {
     display: block;
     position: absolute;
